; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/rme9652/extr_hdspm.c_snd_hdspm_midi_input_open.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/rme9652/extr_hdspm.c_snd_hdspm_midi_input_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_rawmidi_substream = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.hdspm_midi* }
%struct.hdspm_midi = type { i32, %struct.snd_rawmidi_substream*, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_rawmidi_substream*)* @snd_hdspm_midi_input_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snd_hdspm_midi_input_open(%struct.snd_rawmidi_substream* %0) #0 {
  %2 = alloca %struct.snd_rawmidi_substream*, align 8
  %3 = alloca %struct.hdspm_midi*, align 8
  store %struct.snd_rawmidi_substream* %0, %struct.snd_rawmidi_substream** %2, align 8
  %4 = load %struct.snd_rawmidi_substream*, %struct.snd_rawmidi_substream** %2, align 8
  %5 = getelementptr inbounds %struct.snd_rawmidi_substream, %struct.snd_rawmidi_substream* %4, i32 0, i32 0
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load %struct.hdspm_midi*, %struct.hdspm_midi** %7, align 8
  store %struct.hdspm_midi* %8, %struct.hdspm_midi** %3, align 8
  %9 = load %struct.hdspm_midi*, %struct.hdspm_midi** %3, align 8
  %10 = getelementptr inbounds %struct.hdspm_midi, %struct.hdspm_midi* %9, i32 0, i32 0
  %11 = call i32 @spin_lock_irq(i32* %10)
  %12 = load %struct.hdspm_midi*, %struct.hdspm_midi** %3, align 8
  %13 = getelementptr inbounds %struct.hdspm_midi, %struct.hdspm_midi* %12, i32 0, i32 3
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.hdspm_midi*, %struct.hdspm_midi** %3, align 8
  %16 = getelementptr inbounds %struct.hdspm_midi, %struct.hdspm_midi* %15, i32 0, i32 2
  %17 = load i32, i32* %16, align 8
  %18 = call i32 @snd_hdspm_flush_midi_input(i32 %14, i32 %17)
  %19 = load %struct.snd_rawmidi_substream*, %struct.snd_rawmidi_substream** %2, align 8
  %20 = load %struct.hdspm_midi*, %struct.hdspm_midi** %3, align 8
  %21 = getelementptr inbounds %struct.hdspm_midi, %struct.hdspm_midi* %20, i32 0, i32 1
  store %struct.snd_rawmidi_substream* %19, %struct.snd_rawmidi_substream** %21, align 8
  %22 = load %struct.hdspm_midi*, %struct.hdspm_midi** %3, align 8
  %23 = getelementptr inbounds %struct.hdspm_midi, %struct.hdspm_midi* %22, i32 0, i32 0
  %24 = call i32 @spin_unlock_irq(i32* %23)
  ret i32 0
}

declare dso_local i32 @spin_lock_irq(i32*) #1

declare dso_local i32 @snd_hdspm_flush_midi_input(i32, i32) #1

declare dso_local i32 @spin_unlock_irq(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
